wrote initial merged precip/PFAS csv

--- a/PFAS_dataparse.ipynb
+++ b/PFAS_dataparse.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -247,6 +247,15 @@
    ],
    "source": [
     "dat_merged.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dat_merged.to_csv('SAR-Imperial_merged_precip.csv',index=False)"
    ]
   },
   {
